[project]
name = "finance-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rukhsanagull", email = "160248041+misbahkhan99@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.114.0",
    "crewai-tools>=0.42.0",
]

[project.scripts]
finance-advisor = "finance_advisor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
